Heart-Disease-Prediction-Using-ML-/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heart-predictor-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: heart-predictor
  template:
    metadata:
      labels:
        app: heart-predictor
    spec:
      containers:
      - name: heart-container
        image: waleedcodearch/heart-disease:v2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
