Heart-Disease-Prediction-Using-ML-/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-predictor-service
spec:
  type: ClusterIP
  selector:
    app: heart-predictor
  ports:
  - port: 80
    targetPort: 5000
